--- a/holamundo.html
+++ b/holamundo.html
@@ -1,11 +1,5 @@
 <body>
     hola
-    hola mundop
-    msadsad
-    sadas
-    dsadasdada
-    asddas
-    asddasasd
-    Gola Uwu
-
+        UnU
+    UwU     
 </body> 
